perf: 优化部分接口N+1逻辑，提升查询速度